Apply suggestions from code review
Co-authored-by: David Glasser <glasser@apollographql.com>

--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -154,7 +154,7 @@ Continue reading for each step's details, or skip to the [incremental adoption s
 To use persisted queries, you first need a **persisted query list** (**PQL**) in GraphOS Studio.
 Platform teams create an empty PQL in GraphOS Studio so that client teams can register trusted operations to it.
 
-Each PQL is associated with a single graph in GraphOS. A graph, however, can have several PQLs. For example, you may need multiple PQLs for one graph if want a separate PQL for each [contract variant](../delivery/contracts/). You can link a PQL to any variants of its graph. And although many variants may use the same PQL, each variant can only have one linked PQL at a time.
+Each PQL is associated with a single graph in GraphOS. A graph, however, can have several PQLs. For example, you may need multiple PQLs for one graph if you want a separate PQL for each [contract variant](../delivery/contracts/). You can link a PQL to any variants of its graph. And although many variants may use the same PQL, each variant can only have one linked PQL at a time.
 
 #### 1.1 PQL creation
 
