--- a/src/content/graphos/basics/operations/persisted-queries.mdx
+++ b/src/content/graphos/basics/operations/persisted-queries.mdx
@@ -553,7 +553,7 @@ Once you've followed the implementation steps for one client, you can coordinate
 1. Identify all the client apps that execute operations against your router, and the GraphQL client libraries that those apps use.
     - Before you enable safelisting in your router, your client apps must start publishing their operations to your PQL.
 2. Communicate to your client development teams that adopting persisted queries will require adding tooling to their CI/CD pipeline.
-    - Specifically, each client team will need to generate client operation manifests](#31-generate-persisted-queries-manifests) and [publish manifests to the PQL](#32-publish-operations-to-the-pql)
+    - Specifically, each client team will need to generate client operation [manifests](#31-generate-persisted-queries-manifests) and [publish manifests to the PQL](#32-publish-operations-to-the-pql)
 3. Identify which team members will assist with adding tooling to their respective CI/CD pipelines.
 
 ```mermaid
