--- a/src/content/graphos/basics/routing/self-hosted.mdx
+++ b/src/content/graphos/basics/routing/self-hosted.mdx
@@ -5,7 +5,7 @@ description: Host your supergraph's router in your own infrastructure
 
 > ⚠️ **Important:** If you're just getting started with GraphOS, instead [create a cloud supergraph](../quickstart/cloud/).
 >
-> Self-hosted supergraphs are an Enterprise feature for organizations with advanced performance or compliance requirements.
+> Self-hosted supergraphs are designed for organizations with advanced performance or compliance requirements, and require and Enterprise plan to connect to GraphOS.
 >
 > If your organization might benefit from the expanded features of an [Enterprise plan](https://www.apollographql.com/pricing/), please [get in touch with us!](https://www.apollographql.com/contact-sales/)
 
